--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -4,7 +4,7 @@
     <div style="white-space: pre-wrap;">{{ 'WELCOME' | translate }}</div>
     <div class="user">{{ user.name }}</div>
   </ng-container>
-  <app-notification class="notification"></app-notification>
+  <app-notification></app-notification>
   <span class="logout"
         nz-icon
         nzType="logout"
