--- a/src/app/pages/dictionary/dictionary.component.html
+++ b/src/app/pages/dictionary/dictionary.component.html
@@ -45,7 +45,7 @@
     <nz-dropdown-menu #menu="nzDropdownMenu">
       <ul nz-menu>
         <li [nzDisabled]="vm.filterType === 'latest'"
-            (click)="onView8Latest()"
+            (click)="onViewLatest()"
             nz-menu-item>
           {{ 'LATEST' | translate }}
         </li>
