--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
@@ -57,9 +57,15 @@
     text-align: right;
     line-height: 100%;
   }
+  &--reference {
+    color: #ebcb8b;
+    font-size: 11px;
+    font-weight: 600;
+    font-style: italic;
+  }
   .actions {
     position: absolute;
-    bottom: 0;
+    top: 40px;
     right: 0.5rem;
     font-size: 16px;
     .edit-button {
