--- a/src/app/core/layout/notification/notification.component.html
+++ b/src/app/core/layout/notification/notification.component.html
@@ -8,8 +8,8 @@
     <nz-badge nzSize="small"
               [nzCount]="vm.badgeCount">
       <span nz-icon
-            nzType="bell"
-            nzTheme="fill"></span>
+            nzType="history"
+            nzTheme="outline"></span>
     </nz-badge>
   </div>
   <nz-dropdown-menu #notiMenu="nzDropdownMenu">
