--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -3,6 +3,8 @@
     <nz-spin nzSimple></nz-spin>
   </ng-container>
   <ng-template #profileTemplate>
+    <ng-container>UserId: {{ vm.profile.user_id }}</ng-container>
+    <br />
     <ng-container>Email: {{ vm.profile.email }}</ng-container>
     <br />
     <ng-container>Name: {{ vm.profile.name }}</ng-container>
