--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.html
@@ -6,11 +6,13 @@
             (nzOnCancel)="onCancel()">
     <ng-container *nzModalContent>
       <form nz-form
+            (keydown.enter)="onSubmit()"
             autocomplete="off"
             [formGroup]="dictionaryForm"
             [nzLayout]="'vertical'">
         <div nz-row
              [nzGutter]="16">
+          <!-- Display-->
           <div nz-col
                nzSpan="12">
             <nz-form-item>
@@ -31,6 +33,7 @@
             </nz-form-item>
           </div>
 
+          <!-- Pinyin-->
           <div nz-col
                nzSpan="12">
             <nz-form-item>
@@ -51,32 +54,45 @@
             </nz-form-item>
           </div>
 
+          <!-- HSK-->
           <div nz-col
                nzSpan="12">
             <nz-form-item>
-              <nz-form-label nzFor="chinaVietnamWord">{{ 'DICTIONARY.CHINA_VIETNAM_WORD' | translate }}</nz-form-label>
-              <nz-form-control>
-                <input nz-input
-                       placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
-                       id="chinaVietnamWord"
-                       formControlName="chinaVietnamWord" />
+              <nz-form-label nzRequired
+                             nzFor="hsk">HSK</nz-form-label>
+              <nz-form-control [nzErrorTip]="errorHsk">
+                <nz-select nzAllowClear
+                           [nzPlaceHolder]="'SELECT.PLACE_HOLDER' | translate"
+                           formControlName="hsk"
+                           required>
+                  <nz-option nzValue="hsk1"
+                             nzLabel="HSK 1"></nz-option>
+                  <nz-option nzValue="hsk2"
+                             nzLabel="HSK 2"></nz-option>
+                  <nz-option nzValue="hsk3"
+                             nzLabel="HSK 3"></nz-option>
+                  <nz-option nzValue="hsk4"
+                             nzLabel="HSK 4"></nz-option>
+                  <nz-option nzValue="hsk5"
+                             nzLabel="HSK 5"></nz-option>
+                  <nz-option nzValue="hsk6"
+                             nzLabel="HSK 6"></nz-option>
+                  <nz-option nzValue="hsk79"
+                             nzLabel="HSK 7-9"></nz-option>
+                  <nz-option nzValue="z---"
+                             nzLabel="-------"></nz-option>
+                </nz-select>
+                <ng-template #errorHsk
+                             let-control>
+                  <ng-container *ngIf="control.touched && control.hasError('required')">
+                    {{ 'SELECT.PLACE_HOLDER' | translate }}
+                  </ng-container>
+                </ng-template>
               </nz-form-control>
             </nz-form-item>
           </div>
 
-          <div nz-col
-               nzSpan="12">
-            <nz-form-item>
-              <nz-form-label nzFor="reference">{{ 'DICTIONARY.REFERENCE' | translate }}</nz-form-label>
-              <nz-form-control>
-                <input nz-input
-                       placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
-                       id="reference"
-                       formControlName="reference" />
-              </nz-form-control>
-            </nz-form-item>
-          </div>
-
+          <!-- Type-->
           <div nz-col
                nzSpan="12">
             <nz-form-item>
@@ -120,43 +136,7 @@
             </nz-form-item>
           </div>
 
-          <div nz-col
-               nzSpan="12">
-            <nz-form-item>
-              <nz-form-label nzRequired
-                             nzFor="hsk">HSK</nz-form-label>
-              <nz-form-control [nzErrorTip]="errorHsk">
-                <nz-select nzAllowClear
-                           [nzPlaceHolder]="'SELECT.PLACE_HOLDER' | translate"
-                           formControlName="hsk"
-                           required>
-                  <nz-option nzValue="hsk1"
-                             nzLabel="HSK 1"></nz-option>
-                  <nz-option nzValue="hsk2"
-                             nzLabel="HSK 2"></nz-option>
-                  <nz-option nzValue="hsk3"
-                             nzLabel="HSK 3"></nz-option>
-                  <nz-option nzValue="hsk4"
-                             nzLabel="HSK 4"></nz-option>
-                  <nz-option nzValue="hsk5"
-                             nzLabel="HSK 5"></nz-option>
-                  <nz-option nzValue="hsk6"
-                             nzLabel="HSK 6"></nz-option>
-                  <nz-option nzValue="hsk79"
-                             nzLabel="HSK 7-9"></nz-option>
-                  <nz-option nzValue="z---"
-                             nzLabel="-------"></nz-option>
-                </nz-select>
-                <ng-template #errorHsk
-                             let-control>
-                  <ng-container *ngIf="control.touched && control.hasError('required')">
-                    {{ 'SELECT.PLACE_HOLDER' | translate }}
-                  </ng-container>
-                </ng-template>
-              </nz-form-control>
-            </nz-form-item>
-          </div>
-
+          <!-- Define -->
           <div nz-col
                nzSpan="24">
             <nz-form-item>
@@ -176,6 +156,34 @@
               </nz-form-control>
             </nz-form-item>
           </div>
+
+          <!-- Zh-vi-->
+          <div nz-col
+               nzSpan="12">
+            <nz-form-item>
+              <nz-form-label nzFor="chinaVietnamWord">{{ 'DICTIONARY.CHINA_VIETNAM_WORD' | translate }}</nz-form-label>
+              <nz-form-control>
+                <input nz-input
+                       placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                       id="chinaVietnamWord"
+                       formControlName="chinaVietnamWord" />
+              </nz-form-control>
+            </nz-form-item>
+          </div>
+
+          <!-- Note-->
+          <div nz-col
+               nzSpan="12">
+            <nz-form-item>
+              <nz-form-label nzFor="reference">{{ 'DICTIONARY.REFERENCE' | translate }}</nz-form-label>
+              <nz-form-control>
+                <input nz-input
+                       placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                       id="reference"
+                       formControlName="reference" />
+              </nz-form-control>
+            </nz-form-item>
+          </div>
         </div>
       </form>
     </ng-container>
@@ -189,13 +197,13 @@
       </label>
       <button nz-button
               nzType="default"
-              (click)="onCancel()">{{ 'CANCEL' | translate }}</button>
+              (click)="onCancel()">{{ 'CANCEL' | translate }} (Esc)</button>
       <button nz-button
               nzType="primary"
               (click)="onSubmit()"
               [disabled]="dictionaryForm.invalid || !dictionaryForm.dirty || !canEdit || formVm.isSubmitting"
               [nzLoading]="formVm.isSubmitting">
-        {{ formVm.isCreate ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate) }}
+        {{ formVm.isCreate ? ('ACTION.CREATE' | translate) : ('ACTION.UPDATE' | translate) }} (Enter)
       </button>
     </ng-container>
   </nz-modal>
