--- a/src/app/shared/modules/audio/audio.component.html
+++ b/src/app/shared/modules/audio/audio.component.html
@@ -37,7 +37,8 @@
   <div class="audio-list">
     <div *ngFor="let audio of audios | paginate : { itemsPerPage: 16, currentPage: currentPage }"
          class="audio"
-         [class.audio--selected]="url === audio.url">
+         [class.audio--selected]="url === audio.url"
+         (click)="selectedAudio === audio && isPlaying ? pauseAudio.emit() : playAudio.emit(audio)">
       <div class="audio__type">{{ audio.type | translate }} {{ audio.grade | uppercase }}</div>
       <strong [class.audio__title--selected]="url === audio.url"
               class="audio__title">{{ audio.title | translate }}
@@ -50,11 +51,10 @@
                    [nzStrokeColor]="{ '0%': '#b48eadbf', '100%': '#88c0d0bf' }"
                    [nzPercent]="progress.percent"></nz-progress>
       <div class="actions">
-        <span *ngIf="url === audio.url && isPlaying; else play"
+        <span *ngIf="selectedAudio === audio && isPlaying; else play"
               nz-tooltip
               [nzTooltipTitle]="'ACTION.PAUSE' | translate"
               class="pause"
-              (click)="pauseAudio.emit()"
               nz-icon
               nzType="pause-circle"
               nzTheme="fill"></span>
@@ -62,7 +62,6 @@
           <span nz-tooltip
                 [nzTooltipTitle]="'ACTION.PLAY' | translate"
                 class="play"
-                (click)="playAudio.emit(audio)"
                 nz-icon
                 nzType="play-circle"
                 nzTheme="fill"></span>
@@ -70,7 +69,7 @@
         <span nz-tooltip
               [nzTooltipTitle]="'ACTION.SHARE' | translate"
               class="share"
-              (click)="share.emit(audio)"
+              (click)="share.emit(audio); $event.stopPropagation()"
               nz-icon
               nzType="link"
               nzTheme="outline"></span>
