--- a/src/app/pages/listening/listening.component.html
+++ b/src/app/pages/listening/listening.component.html
@@ -6,6 +6,7 @@
             [nzTitle]="'HSK ' + i | translate">
       <ng-template nz-tab>
         <app-audio-list [audios]="vm.data"
+                        [selectedAudio]="selectedAudio"
                         [url]="url"
                         [title]="title"
                         [isLoading]="vm.isLoading"
