--- a/src/app/shared/modules/audio/audio.component.html
+++ b/src/app/shared/modules/audio/audio.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 <ng-template #audioListTemplate>
   <div class="controls"
-       *ngIf="url && title">
+       *ngIf="selectedAudio">
     <h4 class="audio__title">{{ title | translate }}</h4>
     <audio id="audioControls"
            (playing)="playing.emit()"
@@ -11,12 +11,12 @@
            controls
            autoplay
            preload="none"
-           [attr.src]="url">
+           [attr.src]="selectedAudio.url">
       Your browser does not support the audio element.
     </audio>
   </div>
   <div class="controls"
-       *ngIf="!(url && title)">
+       *ngIf="!selectedAudio">
     <h4 class="audio__title">{{ 'SELECT' | translate }} <i nz-icon
          nzType="heart"
          nzTheme="outline"></i></h4>
@@ -37,7 +37,7 @@
   <div class="audio-list">
     <div *ngFor="let audio of audios | paginate : { itemsPerPage: 16, currentPage: currentPage }"
          class="audio"
-         [class.audio--selected]="url === audio.url"
+         [class.audio--selected]="selectedAudio.url === audio.url"
          (click)="selectedAudio === audio && isPlaying ? pauseAudio.emit() : playAudio.emit(audio)">
       <div class="audio__type">{{ audio.type | translate }} {{ audio.grade | uppercase }}</div>
       <strong [class.audio__title--selected]="selectedAudio === audio"
