--- a/src/app/core/layout/notification/notification.component.scss
+++ b/src/app/core/layout/notification/notification.component.scss
@@ -30,8 +30,9 @@
   display: flex;
   flex-flow: column;
   align-items: flex-start;
+  border-left: 5px solid transparent;
   border-bottom: 0.5px solid rgba($color: $gray, $alpha: 0.25);
-  &--content {
+  &__content {
     .block {
       display: list-item;
       font-size: 11px;
@@ -47,12 +48,12 @@
       }
     }
   }
-  &--date {
+  &__date {
     margin-left: auto;
     color: rgba($color: $gray, $alpha: 0.5);
     font-size: 8px;
   }
-  &__unread {
+  &--unread {
     border-left: 5px solid $primary-color;
     background: rgba($color: $gray, $alpha: 0.15);
   }
