--- a/src/app/pages/layout/notification/notification.component.scss
+++ b/src/app/pages/layout/notification/notification.component.scss
@@ -2,10 +2,7 @@
 
 .ant-dropdown-menu {
   padding: 0 !important;
-  max-height: calc($main-height);
-  width: 25vw;
   border-radius: 5px 0 0 5px !important;
-  overflow-y: auto;
 }
 
 .ant-badge-count-sm {
@@ -26,53 +23,77 @@
   cursor: pointer;
 }
 
-.item {
-  background: #fff;
-  display: flex;
-  flex-flow: column;
-  align-items: flex-start;
-  border-left: 5px solid transparent;
-  border-bottom: 0.5px solid rgba($color: $gray, $alpha: 0.25);
-  &__content {
-    .block {
-      display: list-item;
-      font-size: 11px;
-      line-height: $line-height;
-      color: rgba($color: $gray, $alpha: 0.5);
-      font-weight: 300;
-      &--old {
-        margin-right: 0.25rem;
-        color: $black;
-      }
-      &--new {
-        color: $black;
+.list {
+  min-height: 100px;
+  max-height: calc($main-height);
+  width: 400px;
+  overflow-y: auto;
+  .empty {
+    text-align: center;
+    font-size: $font-size;
+    line-height: $line-height;
+    transform: translateY(42px);
+  }
+  .item {
+    background: #fff;
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    border-left: 5px solid transparent;
+    border-bottom: 0.5px solid rgba($color: $gray, $alpha: 0.25);
+    transition: $transition;
+    &__content {
+      .block {
+        display: list-item;
+        font-size: 11px;
+        line-height: $line-height;
+        color: rgba($color: $gray, $alpha: 0.5);
+        font-weight: 300;
+        &--old {
+          margin-right: 0.25rem;
+          color: $black;
+        }
+        &--new {
+          color: $black;
+        }
       }
     }
+    &__date {
+      margin-left: auto;
+      color: rgba($color: $gray, $alpha: 0.5);
+      font-size: 8px;
+    }
+    &--unread {
+      border-left: 5px solid $primary-color;
+      background: rgba($color: $gray, $alpha: 0.15);
+    }
   }
-  &__date {
-    margin-left: auto;
-    color: rgba($color: $gray, $alpha: 0.5);
-    font-size: 8px;
+
+  .item:hover {
+    background: $white;
   }
-  &--unread {
-    border-left: 5px solid $primary-color;
-    background: rgba($color: $gray, $alpha: 0.15);
-  }
-  transition: $transition;
 }
 
-.item:hover {
-  background: $white;
+/****************** thumbnail ******************/
+::-webkit-scrollbar {
+  display: block;
+  background: $second-white;
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  display: block;
+  background: $linear-gradient;
+  border-radius: 4px;
 }
 
 @media screen and (max-width: $tablet) {
-  .ant-dropdown-menu {
+  .list {
     width: calc(37.5vw + 100px);
   }
 }
 
 @media screen and (max-width: $mobile) {
-  .ant-dropdown-menu {
+  .list {
     width: 300px;
   }
 }
