--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -23,11 +23,11 @@
       <h4 [style.text-align]="'center'">{{ 'NO_RESULT' | translate }}</h4>
       <p [style.text-align]="'center'">{{ 'AFTER_NO_RESULT' | translate }}</p>
     </ng-container>
-    <app-dictionary-item [editable]="editable"
+    <app-dictionary-item *ngFor="let word of words; index as i"
+                         [editable]="editable"
                          [deletable]="deletable"
                          (edit)="edit.emit(word)"
                          (delete)="delete.emit(word)"
-                         *ngFor="let word of words; index as i"
                          [word]="word">
       <span [style.width.%]="'10'"
             [style.color]="'#4c566a80'"
